# QRHttpClient

./: CMakeLists.txt  CMakeUserPresets.json  README.md  TyLogger.h  main.cpp
Models/: CNCStatus.h
RESTAPI/: HttpClient.h  IResult.h
